package com.japhy.desgin.flyweight;

/**
 * @author Japhy
 * @since 2021/2/24 19:35
 */
public enum PortionType {
    HEALING, STRENGTH, POISON,
    ;
}
