package com.japhy.desgin.flyweight;

/**
 * @author Japhy
 * @since 2021/2/24 19:38
 */
public class StrengthPortion implements Portion {

    @Override
    public void drink() {
        System.out.println("drink StrengthPortion");
    }
}
